--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Robot Jets</title>
-  </head>
-  <body>
-    <h1>Home Page</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Robot Jets</title>
+   <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+  <header>
+    <h1>My Website</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Welcome to Our Landing Page</h2>
+    <p>This is a simple starter layout with red and black theming.</p>
+    <button>Get Started</button>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 My Website. All rights reserved.</p>
+  </footer>
+</body>
 </html>
