--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <p>This is a simple starter layout with red and black theming.</p>
     <button>Get Started</button>
   </section>
-
+  <section id="about" style="padding: 4rem 2rem; background: #1e1e1e; text-align: center;">
+    <h2>About Us</h2>
+    <p style="max-width: 700px; margin: 1rem auto;">
+      We are a passionate team dedicated to building awesome projects. 
+      This section can be expanded with team bios, mission statements, or anything you want your visitors to know.
+    </p>
+  </section>
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
   </footer>
