--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>My Website</h1>
+    <h1>Robot Jets</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="#about">About</a>
@@ -17,9 +17,17 @@
   </header>
 
   <section class="hero">
-    <h2>Welcome to Our Landing Page</h2>
-    <p>This is a simple starter layout with red and black theming.</p>
-    <button>Get Started</button>
+    <h2>Welcome to Our Team</h2>
+    <!--<button>Veiw our code</button>-->
+    <a href="https://github.com/Robot-Jets-79700A" target="_blank" class="github-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
+      0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.09-.745.083-.729.083-.729
+     1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.332-5.466-5.93
+     0-1.31.465-2.38 1.235-3.22-.135-.304-.54-1.527.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405
+     2.28-1.552 3.285-1.23 3.285-1.23.645 1.649.24 2.872.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.43.372.81 1.102.81 2.222
+      0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57 4.765-1.585 8.2-6.082 8.2-11.385 0-6.627-5.373-12-12-12z"/></svg>
+      View Our Code
+    </a>
   </section>
   <section id="about" style="padding: 4rem 2rem; background: #1e1e1e; text-align: center;">
     <h2>About Us</h2>
@@ -27,6 +35,9 @@
       We are a passionate team dedicated to building awesome projects. 
       This section can be expanded with team bios, mission statements, or anything you want your visitors to know.
     </p>
+  </section>
+  <section id="contact" style="padding: 4rem 2rem; background:    #1e1e1e; text-align: center;">
+    <h2>Contact</h2>
   </section>
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
