create history page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header>
     <h1>Robot Jets</h1>
     <nav>
-      <a href="index.html">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="subpages/History.html">Our History</a>
     </nav>
   </header>
 
