change background due to scaling issues

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   </header>
 
   <section class="hero">
+    <div class="background">
+      <iframe src="bg.html"></iframe>
+    </div>
+
     <h2>Welcome to Our Team</h2>
     <!--<button>Veiw our code</button>-->
     <a href="https://github.com/Robot-Jets-79700A" target="_blank" class="github-btn">
