--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </section>
   <section id="contact" style="padding: 4rem 2rem; background:    #1e1e1e; text-align: center;">
     <h2>Contact</h2>
+    <p style="max-width: 700px; margin: 1rem auto;">Email - robotjets39@gmail.com</p>
   </section>
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
