--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <h2>Contact</h2>
     <p style="max-width: 700px; margin: 1rem auto;">Email - robotjets39@gmail.com</p>
   </section>
-  <footer>
+  <!--<footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
-  </footer>
+  </footer>-->
 </body>
 </html>
