add history and general stuff

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <iframe src="bg.html"></iframe>
     </div>
 
-    <h2>Welcome to Our Team</h2>
+    <h2>Welcome to 79700A</h2>
     <!--<button>Veiw our code</button>-->
     <a href="https://github.com/Robot-Jets-79700A" target="_blank" class="github-btn">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
@@ -37,8 +37,7 @@
   <section id="about" style="padding: 4rem 2rem; background: #1e1e1e; text-align: center;">
     <h2>About Us</h2>
     <p style="max-width: 700px; margin: 1rem auto;">
-      We are a passionate team dedicated to building awesome projects. 
-      This section can be expanded with team bios, mission statements, or anything you want your visitors to know.
+      We are a robotics team from New Mexico who are dedicated to our craft. although we mainly focus on robots we do other projects related with this.
     </p>
   </section>
   <section id="contact" style="padding: 4rem 2rem; background:    #1e1e1e; text-align: center;">
@@ -46,8 +45,8 @@
     <p style="max-width: 700px; margin: 1rem auto;">Email - robotjets39@gmail.com</p>
     <p style="max-width: 700px; margin: 1rem auto;">Instagram - @vex_79700a</p>
   </section>
-  <!--<footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-  </footer>-->
+  <footer>
+    <p>&copy; 2025 79700A. All rights reserved.</p>
+  </footer>
 </body>
 </html>
