--- a/subpages/History.html
+++ b/subpages/History.html
@@ -18,20 +18,27 @@
   </header>
 
   <section class="hero">
+    <div class="background">
+      <iframe src="../bg.html"></iframe>
+    </div>
     <h2>Our History</h2>
   </section>
-  <section id="about" style="padding: 4rem 2rem; background: #1e1e1e; text-align: center;">
-    <h2>About Us</h2>
+  <section id="history" style="padding: 4rem 2rem; background: #1e1e1e; text-align: center;">
+    <h2>Tipping Point (2021 - 2022)</h2>
     <p style="max-width: 700px; margin: 1rem auto;">
-      We are a passionate team dedicated to building awesome projects. 
-      This section can be expanded with team bios, mission statements, or anything you want your visitors to know.
+      Tipping Point was out first year competing. We placed 12th in the state competition and won the judges award. This allowed us to go to worlds in wich we placed 48th.
     </p>
-  </section>
-  <section id="contact" style="padding: 4rem 2rem; background:    #1e1e1e; text-align: center;">
-    <h2>Contact</h2>
+    <h2>Spin Up (2022 - 2023)</h2>
+    <p>After learning a lot from our last season we won execelence award in our fist competition garunteeing us a place in the state competition. At state we on the execelence award again giving us a place a worlds for the second time. At worlds we placed 63rd after some bad matches.</p>
+    <h2>Over Under (2023 - 2024)</h2>
+    <p>At our first match we did pretty bad with a rank of 28 but still managed to barely qualify for state championship. At state we did alright, placing 12th in our division but didn't manage to qualify for worlds.</p>
+    <h2>High Stakes (2024 - 2025)</h2>
+    <p>This year our team would only have 1 person doing everything. during the competitions leading to state we got good rankings but no awards and still managed to qualify. At state we placed 1st winning tournament champions and judges award which allowed us to go to worlds. At worlds we placed 73rd after our robot encountered tons of problems.</p>
+    <h2>Push Back (2025 - 2026)</h2>
+    <p>This is the current season. We are currently working on our 2nd robot.</p>
   </section>
   <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>&copy; 2025 79700A. All rights reserved.</p>
   </footer>
 </body>
 </html>
